<resources>
    <string name="app_name">Project_02_HamsterCompanion</string>
    <string name="hamster_room">Hamster Room</string>
    <string name="welcome_username">Welcome\nUsername!</string>
    <string name="settings">Settings</string>
    <string name="adoption_center">Adoption Center</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin_tingz">Admin Tingz</string>
    <string name="test_data">Test Data</string>
    <string name="manage_users">Manage Users</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="password_again">Password again</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="hamster_name">Hamster Name</string>
    <string name="hunger">Hunger:</string>
    <string name="cleanliness">Cleanliness:</string>
    <string name="energy">Energy:</string>
    <string name="feed">Feed</string>
    <string name="clean">Clean</string>
    <string name="play">Play</string>
    <string name="rest">Rest</string>
    <string name="_0">0</string>
    <string name="care_log">Care Log</string>
    <string name="action">Action</string>

    <string name="date_and_time">Date and Time</string>
    <string name="hamster_home">Hamster Home</string>
    <string name="care">Care</string>
    <string name="hunger_icon">🥕</string>
    <string name="cleanliness_icon">🧼</string>
    <string name="energy_icon">⚡</string>
    <string name="adoption_center_title">Adoption Center</string>
    <string name="hamster_ncare_log">Hamster \nCare Log</string>
    <string name="manage_hamsters">Manage Hamsters</string>
    <string name="back">Back</string>


</resources>